# nepali-phone

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: area.rs  lib.rs  main.rs  operator.rs  parse.rs  phone.rs
